--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffee - Capi</title>
-    <link rel="stylesheet" href="/sass/style.css">
+    <link rel="stylesheet" href="sass/style.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
@@ -49,11 +49,11 @@
         </div>
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="/node_modules/jquery/dist/jquery.js"></script>
-    <script src="/node_modules/tilt.js/dest/tilt.jquery.js"></script>
-    <script src="/js/index.js"></script>
-    <script src="/node_modules/rellax/rellax.js"></script>
-    <script src="/node_modules/rellax/rellax.min.js"></script>
+    <script src="node_modules/jquery/dist/jquery.js"></script>
+    <script src="node_modules/tilt.js/dest/tilt.jquery.js"></script>
+    <script src="js/index.js"></script>
+    <script src="node_modules/rellax/rellax.js"></script>
+    <script src="node_modules/rellax/rellax.min.js"></script>
     <script>
         var rellax = new Rellax('.rellax');
     </script>
