--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <p id="header_logo">Coffe&eacute;</p>
-        <img src="/imgs/cofeeee_g.png" alt="coffee_logo" id="coffee_logo">
+        <img src="imgs/cofeeee_g.png" alt="coffee_logo" id="coffee_logo">
     </header>
     <section class="content_main1">
         <div class="left_content rellax" data-rellax-speed="-6.3">
@@ -24,7 +24,7 @@
         </div>
         <div class="right_content" data-aos="slide-left" data-aos-delay="50" data-aos-duration="1000"
             data-aos-easing="ease-in-out" data-aos-once="false">
-            <img src="/imgs/coffee__cup1_gg.png" alt="coffee_img" data-tilt id="img_1">
+            <img src="imgs/coffee__cup1_gg.png" alt="coffee_img" data-tilt id="img_1">
         </div>
     </section>
     <!-- <section class="cups">
@@ -33,7 +33,7 @@
     <section class="content_main1 content_main2">
         <div class="left_content1">
             <div class="card" data-tilt>
-                <img src="/imgs/bottle1-removebg.png" alt="coffee_img" class="card_img">
+                <img src="imgs/bottle1-removebg.png" alt="coffee_img" class="card_img">
                 <div class="card-title">Espresso Coffee</div>
                 <div class="card-subcontent"></div>
             </div>
