--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
         </div>
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="node_modules/jquery/dist/jquery.js"></script>
-    <script src="node_modules/tilt.js/dest/tilt.jquery.js"></script>
+    <script src="jquery/dist/jquery.js"></script>
+    <script src="tilt.js/dest/tilt.jquery.js"></script>
     <script src="js/index.js"></script>
-    <script src="node_modules/rellax/rellax.js"></script>
-    <script src="node_modules/rellax/rellax.min.js"></script>
+    <script src="rellax/rellax.js"></script>
+    <script src="rellax/rellax.min.js"></script>
     <script>
         var rellax = new Rellax('.rellax');
     </script>
